--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           },
           "configurations": {
             "production": {
@@ -81,7 +83,6 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": [],
